Fixes popup originating from fixed container to be centered on screen so that it’s not cut off.

--- a/tool-ui/src/main/webapp/style/v3/popup.less
+++ b/tool-ui/src/main/webapp/style/v3/popup.less
@@ -29,6 +29,23 @@
     top: 0;
     right: 0;
   }
+
+  &.popup-fixed {
+    bottom: 10% !important;
+    height: auto !important;
+    left: 10% !important;
+    max-width: none !important;
+    position: fixed !important;
+    right: 10% !important;
+    top: 10% !important;
+    width: auto !important;
+
+    > .content {
+      > .marker {
+        display: none !important;
+      }
+    }
+  }
 }
 
 .popup-content {
@@ -283,5 +300,42 @@
   &:before {
     position: relative;
     top: -2px;
+  }
+}
+
+.popup.toolNav-popup {
+  left: 0 !important;
+  margin: 4px 0 0 0 !important;
+  max-width: none !important;
+  position: fixed !important;
+  right: auto !important;
+  top: (@toolHeader-height - 14) !important;
+  width: auto !important;
+  z-index: 101 !important;
+
+  .hasToolBroadcast & {
+    top: (@toolBroadcast-height + @toolHeader-height - 14) !important;
+  }
+
+  &:before {
+    top: @toolHeader-height !important;
+
+    .hasToolBroadcast & {
+      top: (@toolBroadcast-height + @toolHeader-height) !important;
+    }
+  }
+
+  > .content {
+    border-radius: 0 !important;
+    border-bottom-right-radius: 2px !important;
+    border-style: none !important;
+    border-top: 2px solid @color-separator !important;
+    box-shadow: 0 40px 80px -40px black !important;
+    padding: 0 !important;
+
+    > .closeButton,
+    > .marker {
+      display: none;
+    }
   }
 }
